--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/navigation/navbar-top.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/navigation/navbar-top.html
@@ -62,7 +62,7 @@
                 </li>
                 <li>
                     <a href="{% url 'edit-user-profile-page' user.profile.id %}"><i
-                            class="fa-solid fa-user-pen"></i>Edit Profile</a>
+                            class="fa-solid fa-pen-to-square"></i>Edit Profile</a>
                 </li>
             </ul>
         </li>
