--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/community/community_page.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/community/community_page.html
@@ -5,10 +5,11 @@ Page3 - Community
 {% endblock title %}
 
 {% block content %}
+{% include 'navigation/navbar-top.html' %}
 {% include 'community/community_header.html' %}
 
 <div class="main-body">
-    <!-- {% include 'navigation/sidebar-left.html' %} -->
+    {% include 'navigation/sidebar-left.html' %}
 
 
     <div class="page-contents community-page-contents">
