--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/style.css
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/style.css
@@ -210,7 +210,7 @@ i:hover {
 #main-nav {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: baseline;
     width: 100%;
     height: 50px;
     position: fixed;
@@ -225,6 +225,20 @@ i:hover {
     padding-bottom: 15px; */
 }
 
+#main-nav .nav-fixed-elements {
+    /* position: absolute; */
+    position: relative;
+    display: flex;
+    justify-self: flex-start;
+    /* margin-right: auto; */
+    margin-left: 20px;
+}
+
+#main-nav .nav-right-ul {
+    margin-left: auto;
+    margin-right: 100px;
+}
+
 #main-nav ul {
     list-style: none;
     display: flex;
@@ -234,7 +248,7 @@ i:hover {
 #main-nav li {
     text-align: center;
     position: relative;
-    padding: 0 10px;
+    padding: 0 20px;
     font-size: small;
     font-weight: bold;
 }
@@ -298,12 +312,13 @@ i:hover {
     /* background-color: red; */
     height: 100%;
     position: relative;
-    top: 3px;
+    top: 0px;
 }
 
 #main-nav .nav-logo {
     position: relative;
-    top: 10px;
+    top: 0px;
+    padding-left: 10px;
 }
 
 .submenu li {
@@ -337,10 +352,10 @@ i:hover {
 }
 
 .arrow {
-    margin-left: 8px;
-    color: #eee;
-    font-size: 12px;
-    padding-right: 10px;
+    margin-left: 2px;
+    color: var(--text-secondary-color);
+    font-size: 10px;
+    padding-right: 2px;
 }
 
 .add-post-button {
@@ -478,11 +493,12 @@ i:hover {
     padding-top: 100px !important;
     color: #fff !important;
     width: 300px !important;
-    margin-top: -1 rem;
+    /* margin-top: -1 rem; */
     position: fixed;
+    top: 0px;
     display: flex;
     flex-direction: column;
-    display: block;
+
     background-color: var(--post_bg_color);
     border-radius: 10px;
     height: 100%;
@@ -503,8 +519,9 @@ i:hover {
 
 .bottom-sidebar {
     position: absolute;
-    bottom: 70px;
+    bottom: 0px;
     /* padding-bottom: 50px; */
+    /* margin-top: auto; */
     padding: 10px 10px 50px 10px;
 }
 
@@ -1225,7 +1242,7 @@ button {
     width: 100%;
 
     position: relative;
-    /* top: 65px; */
+    top: 50px;
 }
 
 .community-header-img {
@@ -1253,6 +1270,11 @@ button {
     background-color: var(--secondary_bg_color);
     border-radius: 10px;
     margin-bottom: 20px;
+
+}
+
+.community-profile-info-holder:hover {
+    box-shadow: 0 2px 2px 0 rgba(212, 110, 212, 0.2), 0 1.5px 5px 0 rgba(212, 110, 212, 0.2);
 }
 
 .community-profile-info {
@@ -1296,6 +1318,10 @@ button {
 
 .community-profile-info-tabs>div {
     padding: 5px 15px;
+}
+
+.community-profile-info-tabs .item {
+    font-weight: bold;
 }
 
 .community-profile-info-tabs .item:hover {
@@ -1378,10 +1404,6 @@ button {
         display: none;
     }
 
-    .posts-timeline {
-        /* width: 80%;
-        margin: auto; */
-    }
 
     .posts-timeline ul {
         /* margin-block-start: 0;
@@ -1397,6 +1419,13 @@ button {
         display: block;
     }
 
+    #main-nav .nav-right-ul {
+        display: none;
+    }
+
+    .search-bar {
+        width: 300px;
+    }
 
 
 }
