--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/navigation/sidebar.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/navigation/sidebar.html
@@ -18,8 +18,28 @@
     {{main_game_profile.main_gamer_profile.game}}
     -{{main_game_profile.main_gamer_profile.server}}
     -{{main_game_profile.main_gamer_profile.rank}}
-
     {%endif%}
+
+    <br>
+    <br>
+    GAMER PROFILES
+    <br>
+
+    {%if gamer_profiles%}
+    <select class="gamer_profiles" id="gamer_profiles">
+        {%for g in gamer_profiles%}
+        {%if g.game == main_game_profile.main_gamer_profile.game%}
+        <option value={{g.game}} selected="selected">{{g.game}}</option>
+        {%else%}
+        <option value={{g.game}}>{{g.game}}</option>
+        {%endif%}
+        {%endfor%}
+    </select>
+    {%endif%}
+
+    <div class="gamer_profile_stats_section">
+        {%include 'navigation/gamer_profile_stats.html' %}
+    </div>
 
     <div class="matchmaking">
         <a href="{% url 'matchmaking-home' user%}">Matchmaking</a>
@@ -54,3 +74,25 @@
     {% include 'community/communities_list.html' %}
 
 </div>
+<script>
+    $(document).ready(function () {
+        $("select.gamer_profiles").change(function () {
+            var selected_gamer_profile = $(this).children("option:selected").text();
+
+            console.log(selected_gamer_profile);
+            user_name = 'chamber'
+            $.ajax({
+                type: 'POST',
+                url: `/get_gamer_profile_stats/${user_name}`,
+                data: {
+                    game: selected_gamer_profile,
+                    csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val(),
+                },
+                success: function (response) {
+                    console.log(response['gamer_profile_stats'])
+                    $('.gamer_profile_stats_section').html(response['gamer_profile_stats']);
+                }
+            })
+        });
+    });
+</script>
