--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/navigation/sidebar.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/navigation/sidebar.html
@@ -25,6 +25,7 @@
     GAMER PROFILES
     <br>
 
+    {% if user.is_authenticated %}
     {%if gamer_profiles%}
     <select class="gamer_profiles" id="gamer_profiles">
         {%for g in gamer_profiles%}
@@ -46,7 +47,7 @@
     </div>
 
 
-    {% if user.is_authenticated %}
+
     <a href="{% url 'create-gamer-profile' user.username %}">Create Gamer Profile</a>
     {%endif%}
 
@@ -78,9 +79,7 @@
     $(document).ready(function () {
         $("select.gamer_profiles").change(function () {
             var selected_gamer_profile = $(this).children("option:selected").text();
-
-            console.log(selected_gamer_profile);
-            user_name = 'chamber'
+            user_name = $('.sidebar_username').text().replaceAll(' ', '');
             $.ajax({
                 type: 'POST',
                 url: `/get_gamer_profile_stats/${user_name}`,
